--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "launcher",
 	"version": "1.0.0",
-	"description": "Lauchner",
+	"description": "Launcher",
 	"author": "tsmr",
 	"main": "./src/main.js",
 	"scripts": {
@@ -12,7 +12,7 @@
 	},
 	"build": {
 		"appId": "launcher",
-		"productName": "Lauchner",
+		"productName": "Launcher",
 		"copyright": "Copyright (c) 2019 tsmr",
 		"buildVersion": "1.0.0",
 		"win": {
@@ -26,7 +26,12 @@
 	},
 	"dependencies": {
 		"auto-launch": "^5.0.5",
+		"clipboardy": "^2.1.0",
+		"desktop-screenshot": "^0.1.1",
 		"electron-window-position": "^1.0.1",
+		"iconv-lite": "^0.5.0",
+		"node-google-translate-skidz": "^1.1.2",
+		"request": "^2.88.0",
 		"socket.io": "^2.2.0"
 	},
 	"devDependencies": {
