--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
 	},
 	"dependencies": {
 		"auto-launch": "^5.0.5",
+		"cheerio": "^1.0.0-rc.3",
 		"clipboardy": "^2.1.0",
 		"desktop-screenshot": "^0.1.1",
 		"electron-window-position": "^1.0.1",
 		"iconv-lite": "^0.5.0",
 		"node-google-translate-skidz": "^1.1.2",
-		"request": "^2.88.0",
-		"socket.io": "^2.2.0"
+		"request": "^2.88.0"
 	},
 	"devDependencies": {
 		"electron": "^6.0.3",
