modules are now automatically installed

--- a/config.json
+++ b/config.json
@@ -1,121 +1,4 @@
 {
     "hotkey": "alt+space",
-    "module": {
-        "quick.launcher": {
-            "enabled": true,
-            "config": { }
-        },
-        "weather.wettercom": {
-            "enabled": true,
-            "config": {
-                "prefix": "wetter "
-            }
-        },
-        "calc.launcher": {
-            "enabled": true,
-            "config": { }
-        },
-        "programms.launcher": {
-            "enabled": true,
-            "config": { }
-        },
-        "translate.google": {
-            "enabled": true,
-            "config": {
-                "translate": {
-                    "from": "de",
-                    "to": "en"
-                },
-                "waitAfterInput": 1000,
-                "prefix": "$ "
-            }
-        },
-        "battery.launcher": {
-            "enabled": true,
-            "config": {
-                "prefix": "battery"
-            }
-        },
-        "duden.dudende": {
-            "enabled": true,
-            "config": {
-                "prefix": "duden "
-            }
-        },
-        "explorer.launcher": {
-            "enabled": true,
-            "config": {
-                "show": {
-                    "copypath": true,
-                    "openinexplorer": true
-                },
-                "prefix": "="
-            }
-        },
-        "screenshot.launcher": {
-            "enabled": true,
-            "config": {
-                "prefix": "shot"
-            }
-        },
-        "search.launcher": {
-            "enabled": true,
-            "config": {
-                "waitAfterInput": 500,
-                "engines": [
-                    {
-                        "prefix": "s ",
-                        "name": "Startpage: <b>$query</b>",
-                        "desc": "Auf Startpage nach $query suchen",
-                        "icon": "$imgPath/startpage.png",
-                        "engine": "startpage",
-                        "suggestqueries": true,
-                        "url": "https://www.startpage.com/sp/search?q=$query&language=deutsch"
-                    },
-                    {
-                        "prefix": "d ",
-                        "name": "DuckDuckGo Black: <b>$query</b>",
-                        "desc": "Auf DuckDuckGo nach $query suchen",
-                        "icon": "$imgPath/duckblack.png",
-                        "engine": "duckduckgo",
-                        "suggestqueries": true,
-                        "url": "https://duckduckgo.com/?q=$query&kae=d&kl=de-de&kak=-1&kax=-1&kaq=-1&kao=-1&kap=-1&kau=-1&kam=osm&kaj=m&k1=-1&t=h_&ia=web"
-                    },
-                    {
-                        "prefix": "dl ",
-                        "name": "DuckDuckGo: <b>$query</b>",
-                        "desc": "Auf DuckDuckGo nach $query suchen",
-                        "icon": "$imgPath/duck.svg",
-                        "engine": "duckduckgo",
-                        "url": "https://duckduckgo.com/?q=$query&kl=de-de&kak=-1&kax=-1&kaq=-1&kao=-1&kap=-1&kau=-1&kam=osm&kaj=m&k1=-1&t=h_&ia=web"
-                    },
-                    {
-                        "prefix": "g ",
-                        "name": "Google: <b>$query</b>",
-                        "desc": "Auf Google nach $query suchen",
-                        "icon": "$imgPath/google.png",
-                        "url": "https://www.google.de/search?q=$query",
-                        "engine": "google",
-                        "suggestqueries": true 
-                    },
-                    {
-                        "prefix": "w ",
-                        "name": "Wikipedia: <b>$query</b>",
-                        "desc": "Auf Wikipedia nach $query suchen",
-                        "icon": "$imgPath/wikipedia.png",
-                        "url": "https://de.wikipedia.org/w/index.php?search=$query",
-                        "engine": "wikipedia",
-                        "suggestqueries": true 
-                    },
-                    {
-                        "prefix": "hs ",
-                        "name": "https://<b>$query</b>",
-                        "desc": "Url öffnen",
-                        "icon": "$imgPath/http.svg",
-                        "url": "https:/$query"
-                    }
-                ]
-            }
-        }
-    }
+    "module": {}
 }
