--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"auto-launch": "^5.0.5",
 		"cheerio": "^1.0.0-rc.3",
 		"electron-window-position": "^1.0.1",
+		"fetch-favicon": "0.0.2",
 		"filesearch-windows": "1.0.4",
 		"iconv-lite": "^0.5.0",
 		"moment": "^2.24.0",
