--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	"dependencies": {
 		"auto-launch": "^5.0.5",
 		"cheerio": "^1.0.0-rc.3",
-		"electron-window-position": "^1.0.1",
+		"electron-positioner": "^4.1.0",
 		"fetch-favicon": "0.0.2",
 		"filesearch-windows": "1.0.4",
 		"iconv-lite": "^0.5.0",
